# android-ndk-without-gradle

./: .clang-format  .clang-tidy  AndroidManifest.xml  CMakeLists.txt  LICENSE  README.md  apk_build.cmake  build.sh  main.cpp
.github/workflows/: build.yml
res/values/: strings.xml
